--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,142 @@
   }
 
 h1 {
-    color: red;
+    color: rgb(12, 0, 0);
     font-size: 50X;
     text-align: center;
 }
 
 body {
-    margin: 0;
-    font-family: Helvetica;
-    height: 100vh;
+    margin: 100px;
+    height: 60vh;
+    width: 50vh;
+    font-family: 'Sono', sans-serif;
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+    gap: 5px;
+    
   }
 
+  div {
+    margin: 0px;
+    text-align: center;
+  }
 
+.mainBoard-grid {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(240, 233, 233);
+    width: 100%;
+    height: 100%;
+    border: 4px solid black;
+}
+
+.winlose-message{
+    margin: .5em;
+}
+
+.random-code {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0 4em;
+}
+
+.code {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    border: 1px solid #030202;
+    border-radius: 50%;
+}
+
+.codepeg-cointainer {
+
+    display: flex;
+    flex-direction: row;
+}
+
+.colorBtn {
+    width: 30px;
+    height: 30px;
+    border: 2px solid black;
+    border-radius: 50%;
+    margin: .5em 0;
+}
+
+#blue {
+    background-color: blue;
+}
+
+#red {
+    background-color: red;
+}
+
+#yellow {
+    background-color: yellow;
+}
+
+#green {
+    background-color: green;
+}
+
+#purple {
+    background-color: purple;
+}
+
+#grey {
+    background-color: grey;
+}
+
+.playing-board-container > div {
+    display: flex;
+    grid-template-columns: 1fr 1fr;
+    padding: .5em 1em;
+}
+
+.circle {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border: 2px solid black;
+    border-radius: 50%;
+    margin: 0 .1em;
+}
+
+.keypeg-container > div {
+    display: flex;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+
+.small {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border: 2px solid black;
+    border-radius: 50%;
+    margin: .97em .2em;
+    display: flex;
+    
+    
+}
+
+.reset {
+    display: inline-block;
+    width: 100px;
+    height: 50px;
+    border: 2px solid black;
+    border-radius: 25%;
+    color: rgb(12, 11, 12);
+    background-color: rgb(162, 173, 189);
+    font-family: 'Sono', sans-serif;
+    font-size: 20px;
+    align-items: center;
+    margin: 1em auto;
+}
+
+.play-area {
+    border-top: 4px solid black;
+    border-bottom: 4px solid black;
+    display: flex;
+    grid-template-columns: 1fr 1fr;
+}
