--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,17 @@ body {
     display: flex;
 }
 
+/* .resultRow > * {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border: 2px solid black;
+    border-radius: 50%;
+    margin: .97em .2em;
+    display: flex;
+} */
+
+
 .reset {
     display: inline-block;
     width: 100px;
