--- a/css/style.css
+++ b/css/style.css
@@ -14,18 +14,19 @@ body {
     width: 50vh;
     font-family: 'Sono', sans-serif;
     display: grid;
-    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-columns: 2fr 4fr;
     gap: 5px;
   }
 
   div {
     margin: 0px;
-    text-align: center;
+    text-align: justify;
   }
 
  p {
-    font-size: 11px;
-    text-align: justify;
+    padding-left: 2em;
+    font-size: 16px;
+    text-align: center;
   }
 
 .mainBoard-grid {
@@ -39,6 +40,7 @@ body {
 
 .winlose-message{
     margin: .5em;
+    text-align: center;
 }
 
 .random-code {
