--- a/css/style.css
+++ b/css/style.css
@@ -126,3 +126,15 @@ body {
     grid-template-columns: 1fr 1fr;
 }
 
+#howto {
+    color: red;
+}
+
+#green {
+    color: green;
+}
+
+#white {
+    color: white;
+    background-color: black;
+}
